# GLaDOS

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  clang-format-all  format-all
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml
bench/: CMakeLists.txt
bench/src/: JsonParserBenchMark.cpp  MemoryPoolBenchMark.cpp  SIMDFloat4BenchMark.cpp
cmake/: CompilerWarnings.cmake  Config.h.in  FindWindowsSDK.cmake  Findassimp.cmake  ParseAndAddCatchTests.cmake  RootDir.h.in
resource/: Flair.fbx  Strafe.fbx  cube.dae  player.json  xbot@Idle.fbx  xbot@Running.fbx  xbot@Walking.fbx
resource/Low Poly Pine/: Low Poly Pine.mtl
sample/00-basic/: main.cpp
sample/01-setup/: main.cpp
sample/02-camera/: main.cpp
sample/03-gui/: main.cpp
sample/03-texture/: main.cpp
sample/04-rotateObject/: main.cpp
sample/05-index/: main.cpp
sample/06-skybox/: main.cpp
sample/07-light/: main.cpp
sample/08-coordinate/: main.cpp
sample/09-sprite/: main.cpp
sample/10-animation/: main.cpp
sample/11-multiple_camera/: main.cpp
sample/12-audio/: main.cpp
sample/13-font/: main.cpp
sample/14-collision/: main.cpp
sample/15-mesh/: main.cpp
sample/16-tilemap/: main.cpp
sample/17-quat_lerp/: main.cpp
sample/17-slerp/: main.cpp
sample/18-skeletal_animation/: main.cpp
sample/18-skeleton_animation/: main.cpp
sample/19-checkerboard/: main.cpp
sample/20-scrolling_sprite/: main.cpp
sample/21-picking/: main.cpp
sample/22-gizmo/: main.cpp
sample/23-animation_blending/: main.cpp
sample/24-shadow/: main.cpp
sample/25-gui/: main.cpp
shader/: basicFragment.metal  basicVertex.metal  environmentFragment.metal  environmentVertex.metal  spriteFragment.metal  spriteVertex.metal
shader/hlsl/: basicFragment.hlsl  basicVertex.hlsl
shader/mlsl/: basicFragment.metal  basicVertex.metal  boneFragment.metal  boneVertex.metal  checkerFragment.metal  checkerVertex.metal  colorFragment.metal  colorVertex.metal  environmentFragment.metal  environmentVertex.metal  normalFragment.metal  normalVertex.metal  scrollSpriteFragment.metal  scrollSpriteVertex.metal  shadowVertex.metal  skinningFragment.metal  skinningVertex.metal  skyboxFragment.metal  skyboxVertex.metal  spriteFragment.metal  spriteVertex.metal  textureFragment.metal  textureVertex.metal
src/: GLaDOS.h  main.cpp
src/LibGLaDOS/: GLaDOS.h
src/LibGLaDOS/core/: AnimationClip.cpp  AnimationClip.h  AnimationCurve.cpp  AnimationCurve.h  AnimationCurve.hpp  AnimationState.cpp  AnimationState.h  AudioClip.cpp  AudioClip.h  Cloneable.h  Component.cpp  Component.h  GameObject.cpp  GameObject.hpp  KeyFrame.h  Message.cpp  Message.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Sprite.cpp  Sprite.h  TransformCurve.cpp  TransformCurve.h
src/LibGLaDOS/math/: Angle.hpp  BezierSpline.hpp  Bounds.h  Color.cpp  Color.h  FloatingPoint.h  HermiteSpline.hpp  Mat.hpp  Mat4.hpp  Math.cpp  Math.h  Plane.cpp  Plane.h  Point.hpp  Quat.cpp  Quat.h  Random.cpp  Random.h  Random.hpp  Range.hpp  Ray.cpp  Ray.h  Rect.hpp  Size.hpp  UVec.hpp  UVec2.cpp  UVec2.h  UVec3.cpp  UVec3.h  UVec4.cpp  UVec4.h  Vec.hpp  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  VecSwizzle.hpp
src/LibGLaDOS/memory/: Allocation.cpp  Allocation.h  BitMask.cpp  BitMask.h  Bitmap.cpp  Bitmap.h  Blob.cpp  Blob.h  FixedSizeMemoryPool.hpp  STLAllocator.h  StreamBuffer.cpp  StreamBuffer.h  ThreadLocalAllocator.hpp
src/LibGLaDOS/platform/: Input.cpp  Input.h  InputHandler.cpp  InputHandler.h  KeyCode.h  OSTypes.h  Platform.cpp  Platform.h  Timer.cpp  Timer.h
src/LibGLaDOS/resource/: AnimationFrame.cpp  AnimationFrame.h  AnimationState.h  AnimationStateMachine.cpp  AnimationStateMachine.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h
src/LibGLaDOS/utils/: Argument.hpp  CRC32.h  ConcurrentQueue.hpp  CountDownLatch.cpp  CountDownLatch.hpp  CyclicBarrier.cpp  CyclicBarrier.h  DestructionManager.cpp  DestructionManager.h  Destructor.h  Enumeration.h  FileSystem.cpp  FileSystem.h  FixedThreadPool.cpp  FixedThreadPool.hpp  JsonNode.cpp  JsonNode.h  JsonParser.cpp  JsonParser.h  LinkedBlockingQueue.hpp  (+40 more)
src/application/: Application.cpp  Application.h
src/core/: Component.cpp  Component.h  GameObject.cpp  GameObject.hpp  Message.cpp  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/gui/: AbstractDialog.cpp  AbstractDialog.h  AbstractForm.cpp  AbstractForm.h  AbstractFrame.cpp  AbstractFrame.h  AbstractRoundFrame.cpp  AbstractRoundFrame.h  AbstractView.cpp  AbstractView.h  MessageBox.h  ViewBuffer.cpp  ViewBuffer.h
src/math/: Angle.hpp  Bounds.cpp  Bounds.h  Color.cpp  Color.h  Mat4.hpp  Math.cpp  Math.h  Plane.cpp  Plane.h  Quat.cpp  Quat.h  Random.h  Ray.cpp  Ray.h  Rect.hpp  Size.hpp  UVec2.cpp  UVec2.h  UVec3.cpp  UVec3.h  UVec4.cpp  UVec4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/memory/: Allocation.cpp  Allocation.h  Bitmap.cpp  Bitmap.h  STLAllocator.h  StreamBuffer.cpp  StreamBuffer.h
src/platform/: Input.cpp  Input.h  InputHandler.cpp  InputHandler.h  KeyCode.h  OSTypes.h  Platform.cpp  Platform.h  Timer.cpp  Timer.h
src/resource/: Resource.cpp  Resource.h  UniqueId.cpp  UniqueId.h
src/utils/: Debug.cpp  Debug.h  Enumeration.h  FileSystem.cpp  FileSystem.h  LinkedHashMap.hpp  MeshGenerator.cpp  MeshGenerator.h  Semaphore.cpp  Semaphore.h  Singleton.hpp  SpinLock.cpp  SpinLock.h  StringFormatter.cpp  StringFormatter.h  StringUtils.cpp  StringUtils.h  Utility.h
test/: CMakeLists.txt
test/src/: AllocationTest.cpp  BitMaskTest.cpp  BlobTest.cpp  FixedSizeMemoryPoolTest.cpp  FixedThreadPoolTest.cpp  JsonParserTest.cpp  Mat4Test.cpp  MatTest.cpp  QuatTest.cpp  RectTest.cpp  RefPtrTest.cpp  SIMDTest.cpp  STLAllocatorTest.cpp  STLTest.cpp  SplineTest.cpp  SpriteSheetTest.cpp  StreamBufferTest.cpp  StringTest.cpp  StringUtilsTest.cpp  TransformTest.cpp  VecTest.cpp  VectorTest.cpp  VertexBufferTest.cpp  VertexDataTest.cpp  test1.cpp
(+318 files in other folders)
